# itoutposts

.github/workflows/: INT26-30.yml  temp_tets.yml
INT26-14/: README.md  policy.json
INT26-20/: README.md  dev-readOnly-policy.json
INT26-24/: .env  .env.example  Dockerfile  README.md  docker-compose.bpf.yaml  docker-compose.ci.yaml  docker-compose.yaml  pyproject.toml
INT26-24/.github/workflows/: run_test.yml
INT26-24/frontend/: package.json
INT26-24/frontend/src/: App.tsx
INT26-24/frontend/src/api/: carsApi.ts
INT26-24/frontend/src/components/: AvgPriceChart.tsx  CarsDashboard.tsx  CarsTable.tsx
INT26-24/src/app/: config.py  main.py
INT26-24/src/app/cars/: router.py
INT26-24/src/app/logs/: mongo_fallback_errors.jsonl
INT26-24/src/app/monitor/: disk_monitor.sh  ram_monitor.sh
INT26-30/: README.md  workflow_INT26-30.yml
INT26-37/: README.md  ansible-automation.md  ansible-automation.rec  ansible.cfg  hosts.txt  requirements.txt
INT26-37/ec2_private_instruction/: README.md
INT26-37/group_vars/: private_servers  public_servers
INT26-37/playbooks/: deploy-app.yml  purge-app.yml
INT26-39/: readme.md
INT26-39/remote-state-s3/: main.tf
INT26-45/: README_kubernetes_kubeadm_virtualbox.md  readme-general.md  readme.md
INT26-45/configmaps/: monitor-api-config.yaml
INT26-45/deployments/: mongodb.yaml  monitor-api.yaml  nginx-config.yaml
INT26-45/k8s-registry/: README_private_registry_k8s.md  k8s-registry.md  (+1 more)
INT26-57/: README.md  reame.md
INT26-58/: README.md
INT26-6/: README.md
INT26-63/: docker-compose.yml  readme.md
(+73 files in other folders)
