[project]
name = "int26-24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "motor>=3.7.1",
    "polars>=1.40.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pymongo>=4.17.0",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]
